# OICQ

./: CMakeLists.txt  Login.qml  Main.qml  MainView.qml  README.md  SideBar.qml  framelesswindow.cpp  framelesswindow.h  frienddata.cpp  frienddata.h  friendmodel.cpp  friendmodel.h  friendrequestmodel.h  global.h  main.cpp  messagemodel.cpp  messagemodel.h  rec.qrc  screencapture.cpp  screencapture.h  tcpsocket.cpp  textdocumenthandler.cpp  textdocumenthandler.h
OICQ_Client/: .gitignore  CMakeLists.txt  Content.qml  ContentMainView.qml  Dialogs.qml  Login.qml  LoginContent.qml  Main.qml  MainView.qml  MainViewContent.qml  SideMenuBar.qml  controller.cpp  controller.h  framelesswindow.cpp  framelesswindow.h  frienddata.cpp  frienddata.h  friendmodel.cpp  friendmodel.h  friendrequestmodel.cpp  friendrequestmodel.h  global.cpp  global.h  main.cpp  messagemodel.cpp  messagemodel.h  screencapture.h  tcpsocket.h  textdocumenthandler.cpp  textdocumenthandler.h
OICQ_Client/components/: BackIconButton.qml  DragMove.qml  HeadUpLoadPopup.qml  ImageViewer.qml  LoginFail.qml  PictureViewer.qml  RepeatLogin.qml  RightPopUpMenu.qml  RoundCheckBox.qml  ScreenPrint.qml  SearchBox.qml  ThreeButtons.qml  WindowBorder.qml
OICQ_Client/friendChat/: ChatFile.qml  F2.qml  FriendAddWindow.qml  FriendChatWindow.qml  FriendsGroupPopup.qml  MemeView.qml  MessageDelegate.qml  MessageInputField.qml  MessageList.qml  RecentFriendList.qml  RecentFriendListDelegate.qml  SendRestriction.qml
OICQ_Client/network/: fileclient.cpp  fileclient.h  postsend.h  tcpsocket.cpp  tcpsocket.h
OICQ_Server/: .gitignore  CMakeLists.txt  chatmember.cpp  chatmember.h  chatmemberdata.cpp  chatmemberdata.h  clienthandler.cpp  clienthandler.h  fileclienthandler.cpp  fileclienthandler.h  fileserver.cpp  fileserver.h  frienddata.cpp  frienddata.h  global.cpp  global.h  main.cpp  rec.qrc  tcpserver.cpp  tcpserver.h  widget.cpp  widget.h
OICQ_Server/database/: dbmanager.cpp  dbmanager.h
comman/: NetChat.js
components/: BackIconButton.qml  HeadImage.qml  HeadUpLoadPopup.qml  IconButton.qml  ImageViewer.qml  ResizeBorder.qml  ResizeRect.qml  RightPopUpMenu.qml  ScreenPrint.qml  WindowBorder.qml
friendChat/: ChatBubble.qml  ChatFile.qml  FriendAddWindow.qml  FriendChatWindow.qml  FriendsGroupMenu.qml  MemeView.qml  MessageDelegate.qml  MessageInputField.qml  MessageList.qml  RecentFriendList.qml  RecentFriendListDelegate.qml
network/: fileclient.cpp  fileclient.h  postsend.cpp  tcpsocket.cpp  tcpsocket.h
window/: framelesswindow.cpp
视频+文档/: OICQ软件文档.docx
视频+文档/OICQ/OICQ_Client/: appoicqclient  appoicqclient.sh  appoicqclient_qmltyperegistrations.cpp  cmake_install.cmake  pack_client.sh  test_client.sh
视频+文档/OICQ/OICQ_Client/.qt/qml_imports/: appoicqclient_build.rsp  appoicqclient_conf.cmake  appoicqclient_conf.rsp
视频+文档/OICQ/OICQ_Client/.qt/rcc/: appoicqclient_raw_qml_0.qrc  qmake_oicqclient.qrc
视频+文档/OICQ/OICQ_Client/.rcc/qmlcache/: appoicqclient_Dialogs_qml.cpp  appoicqclient_Login_qml.cpp  appoicqclient_MainView_qml.cpp  appoicqclient_Main_qml.cpp  appoicqclient_SideMenuBar_qml.cpp  appoicqclient_qml_loader_file_list.rsp  appoicqclient_qmlcache_loader.cpp
视频+文档/OICQ/OICQ_Client/.rcc/qmlcache/appoicqclient_comman/: NetChat_js.cpp
视频+文档/OICQ/OICQ_Client/.rcc/qmlcache/appoicqclient_components/: BackIconButton_qml.cpp  HeadImage_qml.cpp  HeadUpLoadPopup_qml.cpp  IconButton_qml.cpp  LoginFail_qml.cpp  PictureViewer_qml.cpp  RepeatLogin_qml.cpp  RightPopUpMenu_qml.cpp  RoundCheckBox_qml.cpp  ScreenPrint_qml.cpp  SearchBox_qml.cpp  ThreeButtons_qml.cpp
视频+文档/OICQ/OICQ_Client/.rcc/qmlcache/appoicqclient_friendChat/: ChatFile_qml.cpp  FriendAddWindow_qml.cpp  FriendChatWindow_qml.cpp  FriendsGroupMenu_qml.cpp  FriendsGroupPopup_qml.cpp  MemeView_qml.cpp  MessageDelegate_qml.cpp  MessageInputField_qml.cpp  MessageList_qml.cpp  RecentFriendListDelegate_qml.cpp  RecentFriendList_qml.cpp  SendRestriction_qml.cpp
视频+文档/OICQ/OICQ_Client/.rcc/qmllint/: appoicqclient.rsp  appoicqclient_json.rsp  appoicqclient_module.rsp
视频+文档/OICQ/OICQ_Client/Install/: init_oicq.sh
视频+文档/OICQ/OICQ_Client/appoicqclient_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
视频+文档/OICQ/OICQ_Client/appoicqclient_autogen/5SSUPNRDSB/: moc_fileclient.cpp.d  moc_fileclient.cpp.json  moc_postsend.cpp.d  moc_postsend.cpp.json  moc_tcpsocket.cpp.d  moc_tcpsocket.cpp.json
视频+文档/OICQ/OICQ_Client/appoicqclient_autogen/EWIEGA46WW/: moc_controller.cpp.d  moc_controller.cpp.json  moc_framelesswindow.cpp.d  moc_framelesswindow.cpp.json  moc_frienddata.cpp.d  moc_frienddata.cpp.json  moc_friendmodel.cpp.d  moc_friendmodel.cpp.json  moc_friendrequestmodel.cpp.d  moc_friendrequestmodel.cpp.json  moc_messagemodel.cpp.d  moc_messagemodel.cpp.json  moc_screencapture.cpp.d  moc_screencapture.cpp.json  moc_textdocumenthandler.cpp.d  moc_textdocumenthandler.cpp.json
视频+文档/OICQ/OICQ_Client/meta_types/: appoicqclient_json_file_list.txt  appoicqclient_json_file_list.txt.timestamp  qt6appoicqclient_release_metatypes.json.gen
视频+文档/OICQ/OICQ_Client/oicqclient/: Dialogs.qml  Login.qml  MainView.qml  SideMenuBar.qml  appoicqclient.qmltypes  appoicqclient_qml_module_dir_map.qrc  qmldir  rec.qrc
视频+文档/OICQ/OICQ_Client/oicqclient/components/: HeadUpLoadPopup.qml  RepeatLogin.qml  RoundCheckBox.qml
视频+文档/OICQ/OICQ_Client/oicqclient/friendChat/: FriendAddWindow.qml  FriendsGroupMenu.qml  RecentFriendList.qml  SendRestriction.qml
视频+文档/OICQ/OICQ_Server/: cmake_install.cmake  oicqserver  pack_server.sh  test_server.sh
视频+文档/OICQ/OICQ_Server/oicqserver_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
视频+文档/OICQ/OICQ_Server/oicqserver_autogen/EWIEGA46WW/: moc_chatmember.cpp.d  moc_chatmemberdata.cpp.d  moc_clienthandler.cpp.d  moc_fileserver.cpp.d  moc_tcpserver.cpp.d  moc_widget.cpp.d
视频+文档/OICQ/install/: init.sh
